--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
    <groupId>io.ipfinder.api</groupId>
    <artifactId>ipfinder-io</artifactId>
    <packaging>jar</packaging>
-   <version>1.0-SNAPSHOT</version>
+   <version>1.0.0</version>
    <properties>
       <!-- https://maven.apache.org/general.html#encoding-warning -->
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -65,6 +65,16 @@
         </dependency>
    </dependencies>
 
+<distributionManagement>
+  <snapshotRepository>
+    <id>ossrh</id>
+    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+  </snapshotRepository>
+  <repository>
+    <id>ossrh</id>
+    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+  </repository>
+</distributionManagement>
     <build>
 
         <defaultGoal>clean package</defaultGoal>
