--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,20 @@
             <version>5.4.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.8.5</version>
+          <scope>compile</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+            <scope>compile</scope>
+        </dependency>
+
    </dependencies>
 
 <distributionManagement>
