--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
       <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <name>IPFinder-API</name>
-   <url>https://github.com/ipinfo/java</url>
+   <url>https://github.com/ipfinder-io/ip-finder-java/</url>
    <description>Official Java library for IPFinder</description>
    <issueManagement>
       <system>GitHub</system>
@@ -170,6 +170,17 @@
                  <serverId>ossrh</serverId>
                  <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                  <autoReleaseAfterClose>true</autoReleaseAfterClose>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-release-plugin</artifactId>
+              <version>2.5.3</version>
+              <configuration>
+                <autoVersionSubmodules>true</autoVersionSubmodules>
+                <useReleaseProfile>false</useReleaseProfile>
+                <releaseProfiles>release</releaseProfiles>
+                <goals>deploy</goals>
               </configuration>
             </plugin>
         </plugins>
